# ember_os

./: Cargo.toml  GPT-Academic-2024-03-30-08-56-03.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  emu.sh
.VSCodeCounter/2023-08-01_20-10-18/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-08-03_21-39-09/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-08-03_22-03-49/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-03-04_23-29-16/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-03-04_23-50-52/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.cargo/: config.toml
.github/workflows/: test_via_qemu.yml
benchmarks/: TODO.md
src/: allocator.rs  exit.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  test_framework.rs  tests.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/collections/: mod.rs  prelude.rs
src/demo/: concurrency.rs  cpu_exceptions.rs  double_fault.rs  heap.rs  heap_allocation.rs  memory.rs  mod.rs  multithread.rs  println_eprintln.rs
src/shell/: mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
src/utils/: mod.rs
src/utils/algorithms/: mod.rs
src/utils/algorithms/graph_interface/: cached_greedy_extreme_path.rs  greedy_extreme_path.rs  mod.rs
src/utils/collections/: lru_cache.rs  mod.rs  trie.rs
src/utils/collections/linked_list/: iter.rs  mod.rs
src/utils/collections/vec/: iter.rs  mod.rs  slice.rs
tests/: basic_boot.rs  basic_boot.rs.template  heap_allocation.rs  should_panic.rs  stack_overflow.rs
