[package]
name = "ember_os"
version = "0.1.0"
edition = "2021"

[features]
default = [
    "use_FixedSizeBlockAllocator",
    # "use_LockedHeapAllocator",
    # "use_LinkedListAllocator",
    # "use_BumpAllocator",
    "use_EfficientExecutor",
    "use_SelfDefinedLRUCache",
]
# allocator feauters
use_BumpAllocator = []
use_LinkedListAllocator = []
use_FixedSizeBlockAllocator = []
use_LockedHeapAllocator = []
# executor features
use_SimpleExecutor = []
use_EfficientExecutor = []
# collection features
## lru_cache features
use_SelfDefinedLRUCache = []

[dependencies]
embedded-io = "0.6.1"
hashbrown = "*"
lru = "0.12.3"
cfg-if = "1.0.0"
bootloader = { version = "*", features = ["map_physical_memory"] }
volatile = "*"
spin = "0.9.8"
x86_64 = "*"
uart_16550 = "*"
pic8259 = "0.10.4"
pc-keyboard = "0.7.0"
async-recursion = "1.0.4"
linked_list_allocator = "*"

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.crossbeam-queue]
version = "*"
default-features = false
features = ["alloc"]

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300 # (in seconds)

[[test]]
name = "stack_overflow"
harness = false

[[test]]
name = "should_panic"
harness = false
