[package]
authors = ["Eden Wang <edwardwang33773@gmail.com>"]
description = "A simple OS kernel implemented in rust, which has referenced https://os.phil-opp.com/"
name = "ember_os"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/DrEden33773/ember_os"
homepage = "https://github.com/DrEden33773/ember_os"
license = "MIT/Apache-2.0"
keywords = ["unix-like", "os", "kernel", "rust", "embedded"]
categories = ["embedded", "os", "no-std", "memory-management"]

[features]
default = [
    "use_FixedSizeBlockAllocator",
    # "use_LockedHeapAllocator",
    # "use_LinkedListAllocator",
    # "use_BumpAllocator",
    "use_EfficientExecutor",
    "use_SelfDefinedLRUCache",
]
# allocator feauters
use_BumpAllocator = []
use_LinkedListAllocator = []
use_FixedSizeBlockAllocator = []
use_LockedHeapAllocator = []
# executor features
use_SimpleExecutor = []
use_EfficientExecutor = []
# collection features
## lru_cache features
use_SelfDefinedLRUCache = []

[dependencies]
hashbrown = "0.14.3"
lru = "0.12.3"
cfg-if = "1.0.0"
bootloader = { version = "0.9.28", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.9.8"
x86_64 = "0.14.12"
uart_16550 = "0.3.0"
pic8259 = "0.10.4"
pc-keyboard = "0.7.0"
async-recursion = "1.0.4"
linked_list_allocator = "0.10.5"

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300 # (in seconds)

[[test]]
name = "stack_overflow"
harness = false

[[test]]
name = "should_panic"
harness = false
